# ninja-narrator

./: README.md  build_gui.ps1  pyproject.toml
ninja_narrator/: __init__.py
